# pubproxpy

./: .gitignore  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: pythonpackage.yml  release.yml
pubproxpy/: __init__.py  _constants.py  _singleton.py  errors.py  fetcher.py  types.py
tests/: conftest.py  constants.py  test_errors.py  test_fetcher.py  test_pubproxpy.py
tests/assets/: bad_key_resp.json  daily_limit_resp.json  good_resp.json  no_proxy_resp.json  rate_limit_resp.json  sample_response.json
