[tool.poetry]
name = "pubproxpy"
version = "2.0.0"
description = "An easy to use Python wrapper for pubproxy.com"
license = "GPL-3.0"
authors = ["LovecraftianHorror <LovecraftianHorror@pm.me>"]
readme = "README.md"
repository = "https://github.com/LovecraftianHorror/pubproxpy"
keywords = ["proxy api", "pubproxy", "public proxy", "pubproxy api", "scraping"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8"
pytest = "^6.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
