[tool.poetry]
name = "pubproxpy"
version = "2.0.0"
description = "An easy to use Python wrapper for pubproxy.com"
license = "GPL-3.0"
authors = ["LovecraftianHorror <LovecraftianHorror@pm.me>"]
readme = "README.md"
repository = "https://github.com/LovecraftianHorror/pubproxpy"
keywords = ["proxy api", "pubproxy", "public proxy", "pubproxy api", "scraping"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8"
isort = "^5.6"
pytest = "^6.2"
pytest-black = "^0.3"
pytest-flake8 = "^1.0"
pytest-isort = "^1.2"
pytest-random-order = "^1.0"

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
