[tool.poetry]
name = "pubproxpy"
version = "2.0.2"
description = "An easy to use Python wrapper for pubproxy.com"
license = "GPL-3.0"
authors = ["LovecraftianHorror <LovecraftianHorror@pm.me>"]
readme = "README.md"
repository = "https://github.com/LovecraftianHorror/pubproxpy"
keywords = ["proxy api", "pubproxy", "public proxy", "pubproxy api", "scraping"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7"
pytest = "^5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79
